# Google-Drive-RAG-Search-Engine

./: .env.example  .gitignore  README.md  pyproject.toml
gdrive_rag/: __init__.py  auth.py  chunker.py  cli.py  config.py  drive.py  embed.py  parsers.py  retrieve.py  store.py
tests/: test_auth.py  test_chunker.py  test_cli.py  test_config.py  test_drive.py  test_embed.py  test_parsers.py  test_retrieve.py  test_store.py
