[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdrive-rag"
version = "0.0.1"
description = "Natural-language Q&A with citations over your Google Drive, via the Gemini API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-genai>=1.0.0",
  "google-auth-oauthlib>=1.2",
  "requests>=2.31",
  "click>=8.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gdrive-rag = "gdrive_rag.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["gdrive_rag"]
